// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test BuiltinElement should render correctly 1`] = `
<div>
  <span
    class="anticon icon"
    id="basic/mock-icon"
    role="img"
    tabindex="-1"
  >
    svgr-url
  </span>
</div>
`;

exports[`test BuiltinElement should render correctly when mainType missing 1`] = `
<div>
  <span
    class="anticon icon"
    id="basic/mock-icon2"
    role="img"
    tabindex="-1"
  >
    svgr-url
  </span>
</div>
`;
